--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,28 @@
     <title>Javascript Capstone</title>
 </head>
 <body>
+      <header class="bg-light border-bottom border-1 p-3">
+        <nav class="navbar navbar-expand-md navbar-light bg-light container">
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+              <ul class="navbar-nav w-50 justify-content-between">
+                <li class="nav-item active">
+                  <a class="nav-link h3" href="#">Shows<span id="show_conter"> (12)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link h3" href="#">Planets</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link h3" href="#">Races</a>
+                </li>
+                
+              </ul>
+            </div>
+        </nav>
+      </header>
     <footer class="footer bg-light border-top border-black border-2 mt-5">
         <div class="containe p-4">
           <span class="footer-text">Created by Microverse under CC License.</span>
